# Dictum

./: .gitignore  README.md  next.config.ts  package.json  tsconfig.json
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  cloud.rs  lib.rs  macos_pill.rs  main.rs  models.rs  snippets.rs  whisper.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/app/: page.tsx
src/app/pill/: layout.tsx  page.tsx
src/components/: TauriDesktopGuard.tsx
src/components/app/: AppSidebar.tsx  FlowPill.tsx  ModelCard.tsx  ModelsView.tsx  RatingBars.tsx  Waveform.tsx  Workspace.tsx
src/lib/: platform.ts  snippets.ts
src/lib/audio/: capture.ts
src/lib/dictation/: useDictation.ts
src/lib/models/: catalog.ts  types.ts
src/lib/whisper/: models.ts  protocol.ts  worker.ts
