[package]
name = "dictum"
version = "0.1.0"
description = "Dictum — a private, on-device voice-to-text desktop app"
authors = ["Lattice Labs"]
edition = "2021"

[lib]
name = "dictum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.12", features = ["metal"] }
cpal = "0.15"
enigo = "0.2"
ureq = "2"
anyhow = "1"
parking_lot = "0.12"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
